--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
             <!--Images in a container to make them two columns-->
 
             <div class="row">
-            <div class="col-5">
+            <div class="col-md-3">
 
             <div class="port">
             <img class="w-100 img-fluid" alt="hangman" src="assets/images/placeholder1.jpg">
@@ -71,10 +71,10 @@
             </div>
             </div>
 
-            <div class="col-0"></div>
+            <div class="col-md-0"></div>
 
 
-            <div class="col-5">
+            <div class="col-md-3">
 
             <div class="port">
             <img class="w-100 port-image" width="200px" alt="ucf info widget" src="assets/images/placeholder4.jpg">
@@ -86,7 +86,7 @@
             <h5 class="mb-4 p-1 w-100 text-center bg-info text-white">Rock Paper Scissors</h5>
             </div>
 
-            <div class="col-2"></div>
+            <div class="col-md-2"></div>
 
             </div>
 
